# trader_strategy

./: Cargo.toml  log_TASE.txt  log_dogemarket.txt  tase.txt
src/: main.rs  strategy.rs
