[package]
name = "trader_dennis_orlando"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bfb = { version = "0.1.2", registry = "kellnr" }
bose = { version = "1.0.73", registry = "kellnr" }
colored = "2.0.0"
doge = { version = "1.0.1", registry = "kellnr" }
market_common = { version = "1.0.10", registry = "kellnr", package = "unitn_market_2022" }
rodio = "0.16.0"
tase = { version = "0.1.3", registry = "kellnr", package = "tase" }
trader = { path = "../trader" }
